Fix content and nav transparency on mobile

--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -54,6 +54,15 @@ h3{
 
 
 }
+@media screen and (max-width: 600px){
+	#bs-example-navbar-collapse-1{
+		background: #1582a2;
+	}
+
+	.navbar-shrink{
+		background-color: #1582a2;
+	}
+}
 
 .navbar-shrink{
   background-color: #38BEE5;
